generated-tests/tests/snapshots/tsx/test_generated_object_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const { prop12, prop22 } = object;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (shorthand_property_identifier_pattern)
        (shorthand_property_identifier_pattern)
      )
      (identifier object)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "prop12",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "prop22",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "object",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 28,
            end_line: 1,
            end_column: 34,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
