generated-tests/tests/snapshots/tsx/test_generated_pair_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const { key1: value22 } = obj3;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (pair_pattern
          (property_identifier)
          (identifier value22)
        )
      )
      (identifier obj3)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value22",
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 22,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "key1",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 13,
            },
        },
        Usage {
            name: "obj3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 27,
                end_line: 1,
                end_column: 31,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
