generated-tests/tests/snapshots/tsx/test_generated_parenthesized_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
(value23)

AST:
(program
  (expression_statement
    (parenthesized_expression
      (identifier value23)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value23",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 2,
            end_line: 1,
            end_column: 9,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
