generated-tests/tests/snapshots/tsx/test_generated_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ binding }

AST:
(program
  (statement_block
    (expression_statement
      (identifier binding)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "binding",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 3,
                end_line: 1,
                end_column: 10,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
