generated-tests/tests/snapshots/tsx/test_generated_predefined_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value25: string = 'test';

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value25)
      (type_annotation
        (predefined_type)
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value25",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
